--- a/app/scss/utils/_utility-classes.scss
+++ b/app/scss/utils/_utility-classes.scss
@@ -16,3 +16,7 @@
     display: none;
   }
 }
+
+.no-scroll {
+  overflow-y: hidden;
+}
